# pr_steam_networking_sockets

./: CMakeLists.txt  Install.cmake
.github/workflows/: build-linux-ci.yml  build-windows-ci.yml
build_scripts/: setup.py
client/: CMakeLists.txt
client/src/: module.cpp
cmake/: fetch_prebuilt_binaries.cmake
cmake/modules/: Findsteamworks.cmake  Findvalve_gamenetworkingsockets.cmake
server/: CMakeLists.txt
server/src/: module.cpp
shared/: CMakeLists.txt
shared/src/: shared.cppm  steam_includes.hpp
shared/src/implementation/: common.cpp  util_module.cpp  util_net_packet.cpp
shared/src/interface/: common.cppm  header_data.cppm  util_module.cppm  util_net_packet.cppm
